# perceptualcolor

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README  README.md  check-with-clazy.sh  perceptualcolorpickertest.kdev4
cmake/Modules/: FindLCMS2.cmake
doc/html/: alphaselector_8cpp.html  alphaselector_8cpp__incl.map  alphaselector_8cpp__incl.md5  alphaselector_8cpp_source.html  alphaselector_8h.html  alphaselector_8h__dep__incl.map  alphaselector_8h__dep__incl.md5  alphaselector_8h__incl.map  alphaselector_8h__incl.md5  alphaselector_8h_source.html  annotated.html  annotated_dup.js  chromahuediagram_8cpp.html  chromahuediagram_8cpp__incl.map  chromahuediagram_8cpp__incl.md5  chromahuediagram_8cpp_source.html  chromahuediagram_8h.html  chromahuediagram_8h__dep__incl.map  chromahuediagram_8h__dep__incl.md5  chromahuediagram_8h__incl.map  chromahuediagram_8h__incl.md5  chromahuediagram_8h_source.html  chromalightnessdiagram_8cpp.html  chromalightnessdiagram_8cpp__incl.map  chromalightnessdiagram_8cpp__incl.md5  chromalightnessdiagram_8cpp_source.html  chromalightnessdiagram_8h.html  chromalightnessdiagram_8h__dep__incl.map  chromalightnessdiagram_8h__dep__incl.md5  chromalightnessdiagram_8h__incl.map  chromalightnessdiagram_8h__incl.md5  chromalightnessdiagram_8h_source.html  class_perceptual_color_1_1_alpha_selector-members.html  class_perceptual_color_1_1_alpha_selector.html  class_perceptual_color_1_1_alpha_selector.js  class_perceptual_color_1_1_alpha_selector__coll__graph.map  class_perceptual_color_1_1_alpha_selector__coll__graph.md5  class_perceptual_color_1_1_alpha_selector__inherit__graph.map  class_perceptual_color_1_1_alpha_selector__inherit__graph.md5  class_perceptual_color_1_1_chroma_hue_diagram-members.html  (+263 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  (+52 more)
doc/latex/: alphaselector_8cpp.tex  alphaselector_8cpp__incl.md5  alphaselector_8h.tex  alphaselector_8h__dep__incl.md5  alphaselector_8h__incl.md5  annotated.tex  chromahuediagram_8cpp.tex  chromahuediagram_8cpp__incl.md5  chromahuediagram_8h.tex  chromahuediagram_8h__dep__incl.md5  chromahuediagram_8h__incl.md5  chromalightnessdiagram_8cpp.tex  chromalightnessdiagram_8cpp__incl.md5  chromalightnessdiagram_8h.tex  chromalightnessdiagram_8h__dep__incl.md5  chromalightnessdiagram_8h__incl.md5  class_perceptual_color_1_1_alpha_selector.tex  class_perceptual_color_1_1_alpha_selector__coll__graph.md5  class_perceptual_color_1_1_alpha_selector__inherit__graph.md5  class_perceptual_color_1_1_chroma_hue_diagram.tex  class_perceptual_color_1_1_chroma_hue_diagram__coll__graph.md5  class_perceptual_color_1_1_chroma_hue_diagram__inherit__graph.md5  class_perceptual_color_1_1_chroma_lightness_diagram.tex  class_perceptual_color_1_1_chroma_lightness_diagram__coll__graph.md5  class_perceptual_color_1_1_chroma_lightness_diagram__inherit__graph.md5  class_perceptual_color_1_1_color_dialog.tex  class_perceptual_color_1_1_color_dialog__coll__graph.md5  class_perceptual_color_1_1_color_dialog__inherit__graph.md5  class_perceptual_color_1_1_color_patch.tex  class_perceptual_color_1_1_color_patch__coll__graph.md5  class_perceptual_color_1_1_full_color_description.tex  class_perceptual_color_1_1_full_color_description__coll__graph.md5  class_perceptual_color_1_1_gradient_selector.tex  class_perceptual_color_1_1_gradient_selector__coll__graph.md5  class_perceptual_color_1_1_gradient_selector__inherit__graph.md5  class_perceptual_color_1_1_polar_point_f.tex  class_perceptual_color_1_1_rgb_color_space.tex  class_perceptual_color_1_1_rgb_color_space__inherit__graph.md5  class_perceptual_color_1_1_simple_color_wheel.tex  class_perceptual_color_1_1_simple_color_wheel__coll__graph.md5  (+66 more)
include/PerceptualColor/: alphaselector.h  chromahuediagram.h  chromalightnessdiagram.h  colordialog.h  colorpatch.h  fullcolordescription.h  gradientselector.h  helper.h  polarpointf.h  rgbcolorspace.h  simplecolorwheel.h  wheelcolorpicker.h
src/: ColorSpace.cpp  ColorSpace.h  Comparison.cpp  Comparison.h  Conversion.cpp  Conversion.h  Utils.h  alphaselector.cpp  chromahuediagram.cpp  chromalightnessdiagram.cpp  colordialog.cpp  colorpatch.cpp  fullcolordescription.cpp  gradientselector.cpp  helper.cpp  helper.h  main.cpp  polarpointf.cpp  qlchchromalightnessdiagramm.cpp  qlchchromalightnessdiagramm.h  qlchchromalightnessdiagrammworkerthread.cpp  qlchchromalightnessdiagrammworkerthread.h  qlchcolorwheel.cpp  qlchcolorwheel.h  qlchhuewheel.cpp  qlchhuewheel.h  qperceptualcolorpicker.cpp  qperceptualcolorpicker.h  qperceptualcolorpicker.ui  qpolardegreepointf.cpp  qpolardegreepointf.h  rgbcolorspace.cpp  simplecolorwheel.cpp  wheelcolorpicker.cpp
test/: testcolordialog.cpp  testhelper.cpp  testpolarpointf.cpp  testxxx.cpp
